limpio codigo de ej-5-6

--- a/6-guia/ejercicios-6/ej-5-6.tex
+++ b/6-guia/ejercicios-6/ej-5-6.tex
@@ -1,5 +1,5 @@
-\def\pReal{\ensuremath{\operatorname{\mathfrak{Re}}(z)}} % Parte real
-\def\pIm{\ensuremath{\operatorname{\mathfrak{Im}}(z)}} % Parte imaginaria
+\def\pReal{\mathfrak{Re}}(z) % Parte real
+\def\pIm{\mathfrak{Im}}(z) % Parte imaginaria
 
 \begin{enunciado}{\ejercicio}
 Graficar en el plano complejo
@@ -10,8 +10,6 @@ Graficar en el plano complejo
  \item $\{z \en \complejos - \{0\} / \arg(z^4) = \arg((-1 + i)\cdot \bar{z}^2)\}$
 \end{enumerate}
 \end{enunciado}
-
-\usetikzlibrary{calc}
 
 % ---- 1er grupo -----
 %1er grafico
