--- a/1-guia/ejercicios-1/ej-32-1.tex
+++ b/1-guia/ejercicios-1/ej-32-1.tex
@@ -14,4 +14,24 @@
   \end{enumerate}
 \end{enunciado}
 
-\hacer
+\begin{enumerate}[label=\roman*)]
+ \item $f \circ g = f(x + 3) = 2(x+3)^2 - 18 = 2x^2 + 12x$
+ 
+ $g \circ f = g(2x^2 - 18) = 2x^2 - 18 + 3 = 2x^2 - 15$
+ \item $f \circ g = f(4n) = 4n - 2$ 
+ 
+ $g \circ f =$
+ $
+ \begin{cases}
+ g(n - 2) = 4n - 8 \text{ si $n$ es divisible por 4}\\
+ g(n + 1) = 4n + 4 \text{ si $n$ no es divisible por 4}
+ \end{cases}
+ $
+ \item En este caso $f \circ g$ se puede componer, pero al revés no (no coinciden las salidas con las entradas). 
+ 
+ $f \circ g = f(\sqrt{n}) = (\sqrt{n} + 5, 3\sqrt{n})$
+\end{enumerate}
+
+\begin{aportes}
+ \item \aporte{https://github.com/sigfripro}{sigfripro \github}
+\end{aportes}
