--- a/1-guia/ejercicios-1/ej-2-1.tex
+++ b/1-guia/ejercicios-1/ej-2-1.tex
@@ -19,8 +19,9 @@
       \item $A \subseteq A  $
     \end{enumerate}
   \end{multicols}
-
 \end{enunciado}
+
+Muy parecido al ejercicio anterior.
 
 \begin{multicols}{3}
   \begin{enumerate}[label=(\roman*)]
