erase some vspace commands

--- a/1-guia/ejercicios-1/ej-34-1.tex
+++ b/1-guia/ejercicios-1/ej-34-1.tex
@@ -13,12 +13,12 @@ Primero refresquemos las definiciones para el problema:
 
 \underline{Inyectividad:}
 \begin{center}
-  Sea $f:A \to B$ inyectiva,  $\paratodo x_1, x_2 \en A \big/ f(x_1) = f(x_2) \entonces x_1 = x_2$ \vspace{0.25em}
+  Sea $f:A \to B$ inyectiva,  $\paratodo x_1, x_2 \en A \big/ f(x_1) = f(x_2) \entonces x_1 = x_2$
 \end{center}
 
 \underline{Sobreyectividad:}
 \begin{center}
-  Sea $f:A \to B$ sobreyectiva, $\paratodo y \en B, \existe x \en A \big/ f(x) = y$ \vspace{0.25em}
+  Sea $f:A \to B$ sobreyectiva, $\paratodo y \en B, \existe x \en A \big/ f(x) = y$
 \end{center}
 
 \underline{Biyectividad:}
